# SyntheticDB

./: .gitignore  Makefile  README.md  license.txt  main.py  notes.txt  pyproject.toml  statisticsExperiments.ipynb
.github/workflows/: blank.yml
syntheticdb/: db_core.py  distributions.py  graph.py  main.py  query_parser.py  sql_engine.py
tests/: test_db_core.py  test_db_graph.py  test_sql.py
