[tool.poetry]
name = "syntheticdb"
version = "0.0.1"
description = ""
authors = ["samcorzine@gmail.com", "mattgarvin@gmail.com"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
scipy = "^1.7.1"
pandas = "^1.3.1"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
