[tool.poetry]
name = "syntheticdb"
version = "0.0.16"
description = ""
authors = []
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
scipy = ">=1"
pandas = "^1.2.1"
matplotlib = "^3.4.2"
sqlparse = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
